# requests-clients

./: .env.example  README.md  pyproject.toml
baidu_client/: client.py
baidu_client/tests/: text2audio.py  token.py
weixin_client/: client.py  errors.py  result_code.py  schemas.py
weixin_client/tests/: draft.py  material.py  publish.py
